paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c3/sample_002/target.compile.log
error[E0119]: conflicting implementations of trait `TypeId` for type `i32`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c3/sample_002/target.rs:13:1
   |
 5 | impl TypeId for i32 {
   | ------------------- first implementation here
...
13 | impl<T> TypeId for T {
   | ^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `i32`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.